@@ -12,6 +12,9 @@ installer = MakeMaker
 try_built = 1
 fallback = 0
 
+[ModuleShareDirs]
+Dist::Zilla::Plugin::DynamicPrereqs = share/DynamicPrereqs
+
 [DynamicPrereqs]
 :version = 0.007
 -delimiter = |
