@@ -1,0 +1,3 @@
+sub is_smoker {
+  return $ENV{AUTOMATED_TESTING};
+}
